/* 
  Localizable.strings
  WorldTourRun

  Created by Grzegorz Kwaśniewski on 18/03/17.
  Copyright © 2017 Grzegorz Kwaśniewski. All rights reserved.
*/

"Time: %@" = "Time: %@";
"Reminde me" = "Reminde me";
"Distance: %@" = "Distance: %@";
"Pace: %@" = "Pace: %@";
"Height: %0.3f" = "Height: %0.3f";
"Earned: %@" = "Earned: %@";
"Run %@ to Earn" = "Run %@ to Earn";
"Best: %@" = "Best: %@";

"Cancel" = "Cancel";
"Save" = "Save";
"Discard" = "Discard";
"Save Your run?" = "Save Your run?";

"Default Name" = "Default Name";

"New Run Event" = "New Run Event";
"Give Your Run a name" = "Give Your Run a name";

"This app doesn't have access" = "This app doesn't have access";
"You didn't allow this app to access Your Reminders" = "You didn't allow this app to access Your Reminders";
"Reminder for Your Run was added!" = "Reminder for Your Run was added!";
"Something went wrong :( Reminder was not added" = "Something went wrong :( Reminder was not added";

"There is a run with that name" = "There is a run with that name";
"You can't have two runs with the same name" = "You can't have two runs with the same name";
